CThttp:  try a different Base64 class
javax.xml.bind.DataTypeConverter is gone under Java9.